# gui_basic

./: .gitignore  Cargo.toml  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
my_gui/: Cargo.toml
my_gui/src/: elements.rs  lib.rs  pipeline.rs  texture.rs  vertex.rs  view.rs  window.rs
my_gui/src/elements/: button.rs
shader/: shader.wgsl  video_shader.wgsl
src/: app.rs  buffer.rs  lib.rs  main.rs  pipeline.rs  shader.wgsl  texture.rs  uniforms.rs  vertex.rs  vertex_buffer.rs  video_pipeline.rs  video_player.rs  window_state.rs
src/media/: media_player.rs  mod.rs  pipeline.rs  video.rs
