[package]
name = "gui_basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.3"
ffmpeg-the-third = "2.0.1"
futures = { version = "0.3.30", features = ["executor", "thread-pool"] }
rfd = "0.14.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
wgpu = "0.20.0"
winit = "0.30.0"
