[package]
name = "gui_basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
atomic = "0.6.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
env_logger = "0.11.3"
ffmpeg-the-third = "2.0.1"
futures = "0.3.30"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
log = "0.4.21"
rfd = "0.14.1"
wgpu = "0.20.0"
winit = "0.30.0"
